--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,4 +24,4 @@ services:
       - 19000:9000
     volumes:
       - "$PWD/endpoints.json:/endpoints.json:ro"
-    command: --external-endpoints
+    command: --external-endpoints /endpoints.json
